syntax = "proto3";
package tinykvpb;

option go_package = "tinykv/proto/tinykvpb";

import "kvrpcpb/kvrpcpb.proto";
import "raft_serverpb/raft_serverpb.proto";
import "coprocessor/coprocessor.proto";

service TinyKV {
  // RawKV commands.
  rpc RawGet(kvrpcpb.RawGetRequest) returns (kvrpcpb.RawGetResponse) {}
  rpc RawPut(kvrpcpb.RawPutRequest) returns (kvrpcpb.RawPutResponse) {}
  rpc RawDelete(kvrpcpb.RawDeleteRequest) returns (kvrpcpb.RawDeleteResponse) {}
  rpc RawScan(kvrpcpb.RawScanRequest) returns (kvrpcpb.RawScanResponse) {}

  // KV commands with mvcc/txn supported.
  rpc KvGet(kvrpcpb.GetRequest) returns (kvrpcpb.GetResponse) {}
  rpc KvScan(kvrpcpb.ScanRequest) returns (kvrpcpb.ScanResponse) {}
  rpc KvPrewrite(kvrpcpb.PrewriteRequest) returns (kvrpcpb.PrewriteResponse) {}
  rpc KvCommit(kvrpcpb.CommitRequest) returns (kvrpcpb.CommitResponse) {}
  rpc KvCheckTxnStatus(kvrpcpb.CheckTxnStatusRequest) returns (kvrpcpb.CheckTxnStatusResponse) {}
  rpc KvBatchRollback(kvrpcpb.BatchRollbackRequest) returns (kvrpcpb.BatchRollbackResponse) {}
  rpc KvResolveLock(kvrpcpb.ResolveLockRequest) returns (kvrpcpb.ResolveLockResponse) {}

  // Raft commands (tinykv <-> tinykv).
  rpc Raft(stream raft_serverpb.RaftMessage) returns (raft_serverpb.Done) {}
  rpc Snapshot(stream raft_serverpb.SnapshotChunk) returns (raft_serverpb.Done) {}

  // Coprocessor
  rpc Coprocessor(coprocessor.Request) returns (coprocessor.Response) {}
}